# flash-eeg

./: .gitignore  LICENSE  README.md  pyproject.toml
flash_eeg/: __init__.py  transforms.py
tests/: test_transforms.py
