[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-eeg"
version = "0.4.1"
description = "GPU-accelerated electrophysiology (EEG, iEEG, LFP) transforms for large batch jobs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Maximilian Kalcher"}
]
keywords = ["eeg", "gpu", "pytorch", "spectrogram", "connectivity", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[project.urls]
Homepage = "https://github.com/Swiss-Epilepsy-Center/flash-eeg"

[tool.setuptools.packages.find]
where = ["."]
